--- a/src/generate-quiz.html
+++ b/src/generate-quiz.html
@@ -9,37 +9,40 @@
 <div id="root" class="center">
     <h1 class="h1">Quiz</h1>
     <div class="div-checkbox">
-        <input type="checkbox" class="checkbox-round">
+        <input type="checkbox" class="checkbox-round" onclick="handleClickChapter(this)" value="1">
         <button class="button-8 button-checkbox">Categorie 1</button>
     </div>
     <div class="div-checkbox">
-        <input type="checkbox" class="checkbox-round">
+        <input type="checkbox" class="checkbox-round" onclick="handleClickChapter(this)" value="2">
         <button class="button-8 button-checkbox">Categorie 2</button>
     </div>
     <div class="div-checkbox">
-        <input type="checkbox" class="checkbox-round">
-        <button class="button-8 button-checkbox">Categorie 3</button>
+        <input type="checkbox" class="checkbox-round" onclick="handleClickChapter(this)" value="3">
+        <button class="button-8 button-checkbox" >Categorie 3</button>
     </div>
 
     <div class="div-radio">
         <p>Numar probleme: </p>
-        <input type="radio" name="nr" class="checkbox-round">
+        <input type="radio" name="nr" class="checkbox-round" onclick="handleClickNumber(this)" value="3">
         <p>3</p>
-        <input type="radio" name="nr" class="checkbox-round">
+        <input type="radio" name="nr" class="checkbox-round" onclick="handleClickNumber(this)" value="5">
         <p>5</p>
-        <input type="radio" name="nr" class="checkbox-round">
+        <input type="radio" name="nr" class="checkbox-round" onclick="handleClickNumber(this)" value="10">
         <p>10</p>
     </div>
     <div class="div-radio">
         <p>Timp</p>
-        <input type="radio" name="min" class="checkbox-round">
+        <input type="radio" name="min" class="checkbox-round" onclick="handleClickTime(this);" value="0">
+        <p>0</p>
+        <input type="radio" name="min" class="checkbox-round" onclick="handleClickTime(this);" value="15">
         <p>15</p>
-        <input type="radio" name="min" class="checkbox-round">
+        <input type="radio" name="min" class="checkbox-round" onclick="handleClickTime(this);" value="30">
         <p>30</p>
-        <input type="radio" name="min" class="checkbox-round">
+        <input type="radio" name="min" class="checkbox-round" onclick="handleClickTime(this);" value="60">
         <p>60</p>
     </div>
-    <a class="button-8 quiz" href="quiz.html">Genereaza</a>
+    <a class="button-8 quiz" href="quiz.html" id="link">Genereaza</a>
 </div>
+<script src="generate-quiz.js" defer></script>
 </body>
 </html>
