--- a/src/problem.html
+++ b/src/problem.html
@@ -8,14 +8,19 @@
 <body>
 <div id="root" class="center">
     <div class="div-problem center"></div>
-    <input class="input" type="text"  id="raspuns" name="raspuns" >
+<!--    <input class="input" type="text"  id="raspuns" name="raspuns" >-->
+
+    <math-field id="formula">
+
+    </math-field>
+
     <div class="div-horizontal margin-top">
-        <button class="button-8  symbols">int</button>
-        <button class="button-8 symbols">int</button>
-        <button class="button-8 symbols">int</button>
-        <button class="button-8 symbols">int</button>
-        <button class="button-8 symbols">int</button>
-        <button class="button-8 symbols">int</button>
+        <button class="button-8  symbols">&#43;</button>
+        <button class="button-8 symbols">&#8722;</button>
+        <button class="button-8 symbols">&#8729;</button>
+        <button class="button-8 symbols">&#247;</button>
+        <button class="button-8 symbols">&#8730;</button>
+        <button class="button-8 symbols">&#8747;</button>
     </div>
     <div class="div-horizontal margin-top">
         <a class="button-8 quiz" href="problem.html">Previous</a>
@@ -23,6 +28,6 @@
     </div>
 </div>
 
-
+<script defer src="http://unpkg.com/mathlive"></script>
 </body>
 </html>
