Added right, wrong answer visual change

--- a/src/Pages/generate-quiz.html
+++ b/src/Pages/generate-quiz.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="../index.css"/>
 </head>
 <body>
-<div id="root" class="center">
+<div id="root" class="center-justify">
     <h1 class="h1">Quiz</h1>
     <div class="div-checkbox">
         <input type="checkbox" class="checkbox-round" value="1">
@@ -43,6 +43,6 @@
     </div>
     <a class="button-8 quiz" href="quiz.html" id="link">Genereaza</a>
 </div>
-<script src="generate-quiz.js" defer></script>
+<script src="../Scripts/generate-quiz.js" defer></script>
 </body>
 </html>
