--- a/src/Pages/index.html
+++ b/src/Pages/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="../index.css"/>
 </head>
 <body>
 <h1 class="h1">Analiza Complexa</h1>
-<div class="center">
+<div class="center-justify">
 <a class="button-8" href="list.html">Categoria 1111111111111111</a>
     <a class="button-8" href="list.html">Categoria 0000000000000000</a>
     <a class="button-8" href="list.html">Categoria 333333333333333333</a>
