--- a/src/Pages/list.html
+++ b/src/Pages/list.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="../index.css"/>
 </head>
 <body>
  <h1 class="h1">Probleme</h1>
- <div class="centerColumn">
+ <div class="center">
 
  </div>
 
- <script src="list.js"></script>
+ <script src="../Scripts/list.js"></script>
 </body>
 </html>
