Added keyboard, added local storage (gotta make the problems change colour right)

--- a/src/Pages/list.html
+++ b/src/Pages/list.html
@@ -6,11 +6,13 @@
     <link rel="stylesheet" href="../index.css"/>
 </head>
 <body>
+    <a class="button-8" href="index.html">Back</a>
+
  <h1 class="h1">Probleme</h1>
  <div class="center">
 
  </div>
 
- <script src="../Scripts/list.js"></script>
+ <script defer src="../Scripts/list.js"></script>
 </body>
 </html>
