added proper links (gotta fix the problem data)

--- a/src/Pages/generate-quiz.html
+++ b/src/Pages/generate-quiz.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../index.css"/>
 </head>
 <body>
+<a class="back-button"  href="index.html">Back</a>
 <div id="root" class="center-justify">
     <h1 class="h1">Quiz</h1>
     <div class="div-checkbox">
@@ -41,7 +42,7 @@
         <input type="radio" name="min" class="checkbox-round"  value="60">
         <p>60</p>
     </div>
-    <a class="button-8 quiz" href="quiz.html" id="link">Genereaza</a>
+    <a class="button-8 quiz" id="nextPage" href="quiz.html" id="link">Genereaza</a>
 </div>
 <script src="../Scripts/generate-quiz.js" defer></script>
 </body>
