--- a/src/Pages/problem.html
+++ b/src/Pages/problem.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../index.css"/>
 </head>
 <body>
+<a class=" back-button"  href="list.html">Back</a>
 <div id="root" class="center-justify">
     <div class="div-problem center-justify" id="problemSpace"></div>
 
