--- a/src/Pages/list.html
+++ b/src/Pages/list.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../index.css"/>
 </head>
 <body>
-    <a class="button-8" href="index.html">Back</a>
+    <a class="back-button"  href="index.html">Back</a>
 
  <h1 class="h1">Probleme</h1>
  <div class="center">
