se salveaza statusul de facut, nefacut al unei probleme

--- a/src/Pages/quiz.html
+++ b/src/Pages/quiz.html
@@ -30,7 +30,8 @@
 </div>
 
 <script defer src="http://unpkg.com/mathlive"></script>
-<script src="../Scripts/quiz.js"></script>
-<script src="../Scripts/problem.js"></script>
+<script defer src="../Scripts/problem.js"></script>
+<script defer src="../Scripts/quiz.js"></script>
+
 </body>
 </html>
