se incarca problema corespunzatoare. adaugat variabile

--- a/src/Pages/generate-quiz.html
+++ b/src/Pages/generate-quiz.html
@@ -6,40 +6,40 @@
     <link rel="stylesheet" href="../index.css"/>
 </head>
 <body>
-<a class="back-button"  href="index.html">Back</a>
+<a class="back-button" href="index.html">Back</a>
 <div id="root" class="center-justify">
     <h1 class="h1">Quiz</h1>
     <div class="div-checkbox">
-        <input type="checkbox" class="checkbox-round" value="1">
+        <input type="checkbox" class="checkbox-round" value="1" id="categ1">
         <button class="button-8 button-checkbox">Categorie 1</button>
     </div>
     <div class="div-checkbox">
-        <input type="checkbox" class="checkbox-round" value="2">
+        <input type="checkbox" class="checkbox-round" value="2" id="categ2">
         <button class="button-8 button-checkbox">Categorie 2</button>
     </div>
     <div class="div-checkbox">
-        <input type="checkbox" class="checkbox-round"  value="3">
-        <button class="button-8 button-checkbox" >Categorie 3</button>
+        <input type="checkbox" class="checkbox-round" value="3" id="categ3">
+        <button class="button-8 button-checkbox">Categorie 3</button>
     </div>
 
-    <div class="div-radio"id="number">
+    <div class="div-radio" id="number">
         <p>Numar probleme: </p>
-        <input type="radio" name="nr" class="checkbox-round"  value="3">
+        <input type="radio" name="number" id="nr-3" class="checkbox-round" value="3">
         <p>3</p>
-        <input type="radio" name="nr" class="checkbox-round"  value="5">
+        <input type="radio" name="number" id="nr-5" class="checkbox-round" value="5">
         <p>5</p>
-        <input type="radio" name="nr" class="checkbox-round"  value="10">
+        <input type="radio" name="number" id="nr-10" class="checkbox-round" value="10">
         <p>10</p>
     </div>
     <div class="div-radio" id="time">
         <p>Timp</p>
-        <input type="radio" name="min" class="checkbox-round" value="0">
+        <input type="radio" name="time" id="min-0" class="checkbox-round" value="0">
         <p>0</p>
-        <input type="radio" name="min" class="checkbox-round" value="15">
+        <input type="radio" name="time" id="min-15" class="checkbox-round" value="15">
         <p>15</p>
-        <input type="radio" name="min" class="checkbox-round"  value="30">
+        <input type="radio" name="time" id="min-30" class="checkbox-round" value="30">
         <p>30</p>
-        <input type="radio" name="min" class="checkbox-round"  value="60">
+        <input type="radio" name="time" id="min-60" class="checkbox-round" value="60">
         <p>60</p>
     </div>
     <a class="button-8 quiz" id="nextPage" href="quiz.html" id="link">Genereaza</a>
