--- a/src/Pages/index.html
+++ b/src/Pages/index.html
@@ -8,10 +8,11 @@
 <body>
 <h1 class="h1">Analiza Complexa</h1>
 <div class="center-justify">
-<a class="button-8" href="list.html">Categoria 1111111111111111</a>
-    <a class="button-8" href="list.html">Categoria 0000000000000000</a>
-    <a class="button-8" href="list.html">Categoria 333333333333333333</a>
-    <a class="button-8 quiz" href="generate-quiz.html">Quiz</a>
+    <a class="button-8" href="list.html?categorie=categoria1" id="categoria1">Categoria 1</a>
+    <a class="button-8" href="list.html?categorie=categoria2" id="categoria2">Categoria 2</a>
+    <a class="button-8" href="list.html?categorie=categoria3" id="categoria3">Categoria 3</a>
+
+    <a class="button-8 quiz" id="quiz" href="generate-quiz.html">Quiz</a>
 </div>
 </body>
 </html>
