--- a/src/Pages/list.html
+++ b/src/Pages/list.html
@@ -12,7 +12,8 @@
  <div class="center">
 
  </div>
-
+<button onclick="window.electronAPI.eraseAll()">Erase Progress</button>
+    <script defer src="../Scripts/variables.js"></script>
  <script defer src="../Scripts/list.js"></script>
 </body>
 </html>
