--- a/src/Pages/problem.html
+++ b/src/Pages/problem.html
@@ -29,6 +29,8 @@
 </div>
 
 <script defer src="http://unpkg.com/mathlive"></script>
-<script src="../Scripts/problem.js"></script>
+<script defer src="../Scripts/variables.js"></script>
+<script defer src="../Scripts/problem.js"></script>
+
 </body>
 </html>
