--- a/src/Pages/quiz.html
+++ b/src/Pages/quiz.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../index.css"/>
 </head>
 <body>
-<a class=" back-button"  href="index.html">Back</a>
+<a class=" back-button"  href="generate-quiz.html">Back</a>
 <div id="root" class="center-justify">
     <div class="div-problem center-justify" id="problemSpace"></div>
 
