added categories. Need to fix urls and setting different local storage for problem X in different categories

--- a/src/Pages/index.html
+++ b/src/Pages/index.html
@@ -8,9 +8,9 @@
 <body>
 <h1 class="h1">Analiza Complexa</h1>
 <div class="center-justify">
-    <a class="button-8" href="list.html?categorie=categoria1" id="categoria1">Categoria 1</a>
-    <a class="button-8" href="list.html?categorie=categoria2" id="categoria2">Categoria 2</a>
-    <a class="button-8" href="list.html?categorie=categoria3" id="categoria3">Categoria 3</a>
+    <a class="button-8" href="list.html?category=categoria1" id="categoria1">Categoria 1</a>
+    <a class="button-8" href="list.html?category=categoria2" id="categoria2">Categoria 2</a>
+    <a class="button-8" href="list.html?category=categoria3" id="categoria3">Categoria 3</a>
 
     <a class="button-8 quiz" id="quiz" href="generate-quiz.html">Quiz</a>
 </div>
