--- a/src/Pages/problem.html
+++ b/src/Pages/problem.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<a class=" back-button"  href="list.html">Back</a>
+<a class=" back-button"  onclick=history.back()>Back</a>
 
 <div id="root" class="center-justify">
     <div class="div-problem center-justify" id="problemSpace"></div>
@@ -26,8 +26,8 @@
     </div>
 
     <div class="div-horizontal margin-top">
-        <a class="button-8 quiz" href="problem.html">Previous</a>
-        <a class="button-8 quiz" href="problem.html">Next</a>
+        <a class="button-8 quiz" id="previous">Previous</a>
+        <a class="button-8 quiz" id="next">Next</a>
     </div>
 </div>
 
