done extracting xml from file. to do: extract attributes, form vector

--- a/src/Pages/index.html
+++ b/src/Pages/index.html
@@ -8,11 +8,16 @@
 <body>
 <h1 class="h1">Analiza Complexa</h1>
 <div class="center-justify">
-    <a class="button-8" href="list.html?category=categoria1" id="categoria1">Categoria 1</a>
-    <a class="button-8" href="list.html?category=categoria2" id="categoria2">Categoria 2</a>
-    <a class="button-8" href="list.html?category=categoria3" id="categoria3">Categoria 3</a>
+    <a class="button-8" href="list.html?category=categoriaFC" id="categoriaFC">Functii Complexe</a>
+    <a class="button-8" href="list.html?category=categoriaFO" id="categoriaFO">Functii Olomorfe</a>
+    <a class="button-8" href="list.html?category=categoriaIR" id="categoriaIR">Integrale cu Reziduuri</a>
+    <a class="button-8" href="list.html?category=categoriaIT" id="categoriaIT">Integrale Trigonometrice</a>
+    <a class="button-8" href="list.html?category=categoriaITR" id="categoriaITR">Integrale Trigonometrice cu Reziduuri</a>
+    <a class="button-8" href="list.html?category=categoriaSLR" id="categoriaSLR">Serii Laurent cu Reziduuri</a>
+
 
     <a class="button-8 quiz" id="quiz" href="generate-quiz.html">Quiz</a>
+    <script src="../Scripts/variables.js"></script>
 </div>
 </body>
 </html>
