--- a/src/Pages/problem.html
+++ b/src/Pages/problem.html
@@ -15,8 +15,13 @@
 
     <math-field id="formula"></math-field>
 
+
+        <button id="answerButton" class="visibilityHide basic-button">Raspuns</button>
+
+<div id="answer"></div>
+
     <div class="div-horizontal margin-top">
-        <button class="button-8  symbols" data-latex="\cos">cos</button>
+        <button class="button-8 symbols" data-latex="\cos">cos</button>
         <button class="button-8 symbols" data-latex="\sin">sin</button>
         <button class="button-8 symbols" data-latex="\arctg">arctg</button>
         <button class="button-8 symbols" data-latex="\ln">ln</button>
