--- a/src/Pages/problem.html
+++ b/src/Pages/problem.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="../Stylesheets/Mathfield.css"/>
 </head>
 <body>
 
 <a class=" back-button"  onclick=history.back()>Back</a>
 
 <div id="root" class="center-justify">
-    <div class="div-problem center-justify" id="problemSpace"></div>
+<!--    <div class="div-problem center-justify" id="problemSpace"></div>-->
 
 
-    <math-field id="formula"></math-field>
+    <math-field class="div-problem center-justify margin-bottom" id="problemSpace"></math-field>
 
 
         <button id="answerButton" class="visibilityHide basic-button">Raspuns</button>
@@ -21,20 +22,22 @@
 <div id="answer"></div>
 
     <div class="div-horizontal margin-top">
-        <button class="button-8 symbols" data-latex="\cos">cos</button>
-        <button class="button-8 symbols" data-latex="\sin">sin</button>
-        <button class="button-8 symbols" data-latex="\arctg">arctg</button>
-        <button class="button-8 symbols" data-latex="\ln">ln</button>
-        <button class="button-8 symbols" data-latex="\sqrt">&#8730;</button>
-        <button class="button-8 symbols" data-latex="\sqrt[n]">n&#8730;</button>
-        <button class="button-8 symbols" data-latex="\int_0^\infty\limits">&#8747;</button>
-    </div>
-
-    <div class="div-horizontal margin-top">
         <a class="button-8 quiz" id="previous">Previous</a>
         <a class="button-8 quiz" id="next">Next</a>
     </div>
 </div>
+
+<!--    <div class="div-horizontal margin-top">-->
+<!--        <button class="button-8 symbols" data-latex="\cos">cos</button>-->
+<!--        <button class="button-8 symbols" data-latex="\sin">sin</button>-->
+<!--        <button class="button-8 symbols" data-latex="\arctg">arctg</button>-->
+<!--        <button class="button-8 symbols" data-latex="\ln">ln</button>-->
+<!--        <button class="button-8 symbols" data-latex="\sqrt">&#8730;</button>-->
+<!--        <button class="button-8 symbols" data-latex="\sqrt[n]">n&#8730;</button>-->
+<!--        <button class="button-8 symbols" data-latex="\int_0^\infty\limits">&#8747;</button>-->
+    </div>
+
+
 
 <script defer src="http://unpkg.com/mathlive"></script>
 <script defer src="../Scripts/variables.js"></script>
