i have answers, display the regex ugly, edit xml to do: make answers, fix display, raspuns

--- a/src/Pages/problem.html
+++ b/src/Pages/problem.html
@@ -14,10 +14,11 @@
 <!--    <div class="div-problem center-justify" id="problemSpace"></div>-->
 
 
-    <math-field class="div-problem center-justify margin-bottom" id="problemSpace"></math-field>
+    <span id="problemSpace" class="div-problem center-justify margin-bottom">
+<!--    <math-field class="div-problem center-justify margin-bottom" id="problemSpace"></math-field>-->
+    </span>
 
-
-        <button id="answerButton" class="visibilityHide basic-button">Raspuns</button>
+        <button id="answerButton" class="">Raspuns</button>
 
 <div id="answer"></div>
 
