--- a/src/Pages/problem.html
+++ b/src/Pages/problem.html
@@ -11,15 +11,12 @@
 <a class=" back-button"  onclick=history.back()>Back</a>
 
 <div id="root" class="center-justify">
-<!--    <div class="div-problem center-justify" id="problemSpace"></div>-->
-
 
     <span id="problemSpace" class="div-problem center-justify margin-bottom">
-<!--    <math-field class="div-problem center-justify margin-bottom" id="problemSpace"></math-field>-->
     </span>
 
-        <button id="answerButton" class="">Raspuns</button>
-
+        <button id="answerButton" class="answer-button">Raspuns</button>
+<div id="raspuns"></div>
 <div id="answer"></div>
 
     <div class="div-horizontal margin-top">
