--- a/src/Pages/generate-quiz.html
+++ b/src/Pages/generate-quiz.html
@@ -61,8 +61,11 @@
     <a class="button-8 quiz" id="nextPage" href="quiz.html" id="link">Genereaza</a>
 </div>
 
+<script type="module" src="../Scripts/firebase.js"></script>
 <script defer src="../Scripts/variables.js"></script>
+<script defer src="../Scripts/parsedProblems.js"></script>
 <script src="../Scripts/generate-quiz.js" defer></script>
+
 
 </body>
 </html>
