--- a/src/Pages/list.html
+++ b/src/Pages/list.html
@@ -13,9 +13,12 @@
 <div class="center">
 
 </div>
-<button onclick="window.electronAPI.eraseAll()">Erase Progress</button>
+<button onclick="window.eraseAllForUser()">Erase Progress</button>
 
+<script type="module" src="../Scripts/firebase.js"></script>
 <script defer src="../Scripts/variables.js"></script>
+<script defer src="../Scripts/parsedProblems.js"></script>
 <script defer src="../Scripts/list.js"></script>
+
 </body>
 </html>
