--- a/src/Pages/problem.html
+++ b/src/Pages/problem.html
@@ -36,10 +36,12 @@
     </div>
 
 
-
+<script type="module" src="../Scripts/firebase.js"></script>
 <script defer src="http://unpkg.com/mathlive"></script>
 <script defer src="../Scripts/variables.js"></script>
+<script defer src="../Scripts/parsedProblems.js"></script>
 <script defer src="../Scripts/problem.js"></script>
+
 
 </body>
 </html>
