--- a/src/Pages/quiz.html
+++ b/src/Pages/quiz.html
@@ -22,9 +22,11 @@
     </div>
 </div>
 
+<script type="module" src="../Scripts/firebase.js"></script>
 <script defer src="http://unpkg.com/mathlive"></script>
 <script defer src="../Scripts/variables.js"></script>
+<script defer src="../Scripts/parsedProblems.js"></script>
+<script defer src="../Scripts/parsedProblems.js"></script>
 <script defer src="../Scripts/quiz.js"></script>
-
 </body>
 </html>
