Ironed out all bugs

--- a/src/Pages/generate-quiz.html
+++ b/src/Pages/generate-quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="Stylesheets/index.css"/>
 </head>
 
 <body>
@@ -61,10 +61,10 @@
     <a class="button-8 quiz" id="nextPage" href="quiz.html" id="link">Genereaza</a>
 </div>
 
-<script type="module" src="../Scripts/firebase.js"></script>
-<script defer src="../Scripts/variables.js"></script>
-<script defer src="../Scripts/parsedProblems.js"></script>
-<script src="../Scripts/generate-quiz.js" defer></script>
+<script type="module" src="/Scripts/firebase.js"></script>
+<script defer src="/Scripts/parsedProblems.js"></script>
+<script defer src="/Scripts/variables.js"></script>
+<script src="/Scripts/generate-quiz.js" defer></script>
 
 
 </body>
