--- a/src/Pages/index.html
+++ b/src/Pages/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Hello World!</title>
-    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="Stylesheets/index.css"/>
 </head>
 <body>
 <h1 class="h1">Analiza Complexa</h1>
@@ -30,9 +30,10 @@
 
 
     <a class="button-8 quiz" id="quiz" href="generate-quiz.html">Quiz</a>
-    <script type="module" src="../Scripts/firebase.js"></script>
-    <script src="../Scripts/variables.js"></script>
-    <script async src="../Scripts/auth.js"></script>
+    <script src="/Scripts/authQueue.js"></script>
+    <script type="module" src="/Scripts/firebase.js"></script>
+    <script src="/Scripts/variables.js"></script>
+    <script src="/Scripts/auth.js"></script>
 </div>
 </body>
 </html>
