--- a/src/Pages/list.html
+++ b/src/Pages/list.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="Stylesheets/index.css"/>
 </head>
 <body>
 
@@ -15,10 +15,11 @@
 </div>
 <button onclick="window.eraseAllForUser()">Erase Progress</button>
 
-<script type="module" src="../Scripts/firebase.js"></script>
-<script defer src="../Scripts/variables.js"></script>
-<script defer src="../Scripts/parsedProblems.js"></script>
-<script defer src="../Scripts/list.js"></script>
+<script src="/Scripts/authQueue.js"></script>
+<script type="module" src="/Scripts/firebase.js"></script>
+<script defer src="/Scripts/parsedProblems.js"></script>
+<script defer src="/Scripts/variables.js"></script>
+<script defer src="/Scripts/list.js"></script>
 
 </body>
 </html>
