--- a/src/Pages/problem.html
+++ b/src/Pages/problem.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../index.css"/>
-    <link rel="stylesheet" href="../Stylesheets/Mathfield.css"/>
+    <link rel="stylesheet" href="/Stylesheets/index.css"/>
+    <link rel="stylesheet" href="/Stylesheets/Mathfield.css"/>
 </head>
 <body>
 
@@ -36,11 +36,11 @@
     </div>
 
 
-<script type="module" src="../Scripts/firebase.js"></script>
-<script defer src="http://unpkg.com/mathlive"></script>
-<script defer src="../Scripts/variables.js"></script>
-<script defer src="../Scripts/parsedProblems.js"></script>
-<script defer src="../Scripts/problem.js"></script>
+<script type="module" src="/Scripts/firebase.js"></script>
+<script defer src="https://unpkg.com/mathlive"></script>
+<script defer src="/Scripts/parsedProblems.js"></script>
+<script defer src="/Scripts/variables.js"></script>
+<script defer src="/Scripts/problem.js"></script>
 
 
 </body>
