--- a/src/Pages/quiz.html
+++ b/src/Pages/quiz.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="Stylesheets/index.css"/>
 <body>
 
 <a class=" back-button"  href="generate-quiz.html">Back</a>
@@ -22,11 +22,10 @@
     </div>
 </div>
 
-<script type="module" src="../Scripts/firebase.js"></script>
+<script type="module" src="/Scripts/firebase.js"></script>
 <script defer src="http://unpkg.com/mathlive"></script>
-<script defer src="../Scripts/variables.js"></script>
-<script defer src="../Scripts/parsedProblems.js"></script>
-<script defer src="../Scripts/parsedProblems.js"></script>
-<script defer src="../Scripts/quiz.js"></script>
+<script defer src="/Scripts/parsedProblems.js"></script>
+<script defer src="/Scripts/variables.js"></script>
+<script defer src="/Scripts/quiz.js"></script>
 </body>
 </html>
