--- a/src/Pages/quiz-result.html
+++ b/src/Pages/quiz-result.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../index.css"/>
+    <link rel="stylesheet" href="Stylesheets/index.css"/>
 </head>
 <body>
 
@@ -16,6 +16,6 @@
 </div>
 
 
-<script defer src="../Scripts/quiz-result.js"></script>
+<script defer src="/Scripts/quiz-result.js"></script>
 </body>
 </html>
