Split the problems

--- a/src/Pages/generate-quiz.html
+++ b/src/Pages/generate-quiz.html
@@ -61,6 +61,7 @@
     <a class="button-8 quiz" id="nextPage" href="quiz.html" id="link">Genereaza</a>
 </div>
 
+<script src="/Scripts/authQueue.js"></script>
 <script type="module" src="/Scripts/firebase.js"></script>
 <script defer src="/Scripts/parsedProblems.js"></script>
 <script defer src="/Scripts/variables.js"></script>
