--- a/src/Pages/index.html
+++ b/src/Pages/index.html
@@ -15,11 +15,14 @@
             <button class="button-8" id="login">Intra in cont</button>
             <button class="button-8" id="signup">Creaza cont</button>
         </div>
-        <button class="button-8" id="hide-login">Inchide</button>
+        <p id ="login_error"></p>
     </div>
 </div>
 <div class="center-justify">
-    <button class="button-8" id="show-login">Login</button>
+
+
+    <img class="image" src="/Citi_logo.jpeg" alt="Your Image">
+    <button class="button-8 quiz" id="show-login">Logout</button>
     <a class="button-8" href="list.html?category=categoriaFC" id="categoriaFC">Functii Complexe</a>
     <a class="button-8" href="list.html?category=categoriaFO" id="categoriaFO">Functii Olomorfe</a>
     <a class="button-8" href="list.html?category=categoriaIR" id="categoriaIR">Integrale cu Reziduuri</a>
