--- a/src/Pages/problem.html
+++ b/src/Pages/problem.html
@@ -35,7 +35,7 @@
 <!--        <button class="button-8 symbols" data-latex="\int_0^\infty\limits">&#8747;</button>-->
     </div>
 
-
+<script src="/Scripts/authQueue.js"></script>
 <script type="module" src="/Scripts/firebase.js"></script>
 <script defer src="https://unpkg.com/mathlive"></script>
 <script defer src="/Scripts/parsedProblems.js"></script>
