--- a/src/Pages/quiz.html
+++ b/src/Pages/quiz.html
@@ -17,13 +17,14 @@
 
 
     <div class="div-horizontal margin-top">
-        <p class="p" id="timer"></p><p class="p" id="min">min</p>
+        <p class="p" id="timer"></p>
         <a class="button-8 quiz" id="nextProblem">Next</a>
     </div>
 </div>
 
+<script src="/Scripts/authQueue.js"></script>
 <script type="module" src="/Scripts/firebase.js"></script>
-<script defer src="http://unpkg.com/mathlive"></script>
+<script defer src="https://unpkg.com/mathlive"></script>
 <script defer src="/Scripts/parsedProblems.js"></script>
 <script defer src="/Scripts/variables.js"></script>
 <script defer src="/Scripts/quiz.js"></script>
